--- a/style.css
+++ b/style.css
@@ -102,3 +102,14 @@ video{
     top: 10px;
     right: 10px;
 }
+
+.ml-pane .muteToggle{
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    z-index: 900;
+    background: red;
+    top: 50px;
+    right: 50px;
+}
