--- a/style.css
+++ b/style.css
@@ -3,95 +3,31 @@
     padding: 0;
     box-sizing: border-box;
   }
-  .container{
-      height: calc(100vh);
-      overflow: scroll;
-      display: grid;
-      grid-template-columns: 1fr 2fr 1fr;
-      grid-template-rows: 3fr 2fr;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      background-color: #252830;
-  }
-  .title-pane{
-    padding:1em 0 0 1em;
-  }
-  .suggestion-pane{
-    padding:1em 1em 0 0;
-  }
-  .media-pane{
-    padding:1em 0 1em 1em;
+.container{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    height: calc(100vh);
+    background: linear-gradient(135deg, rgba(147,206,222,1) 0%, rgba(130,196,215,1) 26%, rgba(117,189,209,1) 46%, rgba(86,172,196,1) 84%, rgba(73,165,191,1) 100%);
 }
-.count-pane{
-    padding:1em 1em  1em 0;
-}
-.paper{
-    height: 100%;
-    border-radius: 5px;
-    text-align: center;
-}
-h1,h2,h3{
-    font-weight: 300;
-}
-
-.paper h1{
-    font-size: 3rem;
-}
-.title-pane .paper {
-    color: #1BC98E;
-}
-.suggestion-pane .paper {
-    color: #E64759;
-}
-.media-pane .paper {
-    color: #9F86FF
-}
-.count-pane .paper {
-    color: #E64759;;
-}
-.video-pane{
-    grid-row:span 2;
-    position: relative;
-}
-.video-pane video{
-    position: absolute; 
-    left:0;
-    top:0;
-    overflow: hidden;
-    z-index: 99;
-    object-fit: cover;
-    transform: scaleX(-1);
-}
-.video-pane canvas{
-    position: absolute;
-    z-index: 100;
-    left:0;
-    top:0;
-    overflow: hidden;
-}
-body{
+.container > div{
     position: relative;
 }
 .ml-pane{
-position: absolute;
-height: 904px;
-width: 1204px;
-left:5px;top:5px;
-border:2px solid red;
+    position: absolute;
+    overflow: hidden;
+    z-index:100;
+    height: 100%;
+    width: 100%;
+    box-shadow: -2px 3px 22px 2px rgba(0,0,0,0.75);
+    background: #000;
 }
 video,canvas{
     position: absolute;
 }
-canvas{
-    z-index: 99;
-}
 video{
-    
+    object-fit: cover;
 }
-.ml-pane .marker{
-    position: absolute;
-    z-index:6000
-}
-
 .ml-pane .status{
     position: absolute;
     height: 20px;
@@ -112,4 +48,30 @@ video{
     background: red;
     right: 9px;
     top: 59px;
+}
+.countText{
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    height: 50%;
+    transform: translate(0, -50%);
+    text-align: center;
+}
+.countText h1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 9rem;
+    transform: translate(-50%,-50%);
+    font-weight: 100;
+}
+.rightSidebar{
+    padding: 3rem 1.5rem;
+}
+.rightSidebar h3{
+    font-weight: 300;
+    font-size: 2rem;
+    margin: 24px 0;
+    border-left: 5px solid red;
+    padding: 0 0 0 20px;
 }
