--- a/style.css
+++ b/style.css
@@ -66,12 +66,26 @@ video{
     font-weight: 100;
 }
 .rightSidebar{
-    padding: 3rem 1.5rem;
+    display: flex;
 }
-.rightSidebar h3{
+.errorTextContainer{
+    padding: 3rem 1.5rem;
+    flex:1;
+}
+.errorTextContainer h3{
     font-weight: 300;
     font-size: 2rem;
     margin: 24px 0;
     border-left: 5px solid red;
     padding: 0 0 0 20px;
+}
+.timerContainer{
+    position: absolute;
+    height: 150px;
+    width: 100%;
+    bottom: 0;
+    font-weight: 300;
+    font-size: 5rem;
+    line-height: 150px;
+    text-align: center;
 }
