--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ video{
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
-    height: 400px;
+    min-height: 400px;
     width: 600px;
     border-radius: 5px;
     z-index: 100;
@@ -162,10 +162,19 @@ video{
     font-weight: 350;
     color: #fff;
 }
+.summaryBody h2.mistakes{
+    margin-bottom: 1rem;
+}
 
 .summaryBody h3{
     font-size: 3rem;
     margin-bottom: 2rem;
     font-weight: 600;
     color: orange;
+}
+.summaryBody h4{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-weight: 300;
+    color: #fff; 
 }
